# test-kiara

./: README.txt  SConsProject  SConstruct
devenv/: calctest_result.txt  chat_input.txt  chat_result.txt  enctest_result.txt  jenkins.sh  module.json  structtest_result.txt  test.sh  test_examples.py  test_examples.sh  tools.sh
devenv/winpexpect/: winpexpect.py
doc/: INSTALL.txt  caconfig.cnf  creation_of_certs.txt  kiara_architecture.graphml  kiara_open_connection.graphml  kiara_pipeline.graphml  kiaranode.cnf
doc/templates/: header.gpl  header.lgpl
examples/: CMakeLists.txt  README.txt  SConstruct  build.sh  structtest.c  structtest_server.c
sdk/: init.bat  init.sh
src/: SConscript  SConstruct  bin2c.c  genlexer.sh  lemon.c  replace.sh  tokens.txt
src/KIARA/: kiara.h  kiara_cxx_macros.hpp  kiara_cxx_stdlib.hpp  kiara_dds_cxx_macros.hpp  kiara_dds_macros.h  kiara_macros.h  kiara_pp_annotation.h  kiara_security.h
src/benchmarks/: run_benchmarks.sh
src/tests/: aostest.c  aostest_cpp.cpp  aostest_kiara_client.h  aostest_kiara_server.h  aostest_server.c  aostest_types.h  apidemo.cpp  apidemo_c.c  apiexample.c  apiexample1.c  apiexample_cpp.cpp  apiexample_dds.c  apiexample_dds_cpp.cpp  apitest.cpp  apitest_c.c  arraytest.c  arraytest_kiara.h  arraytest_server.c  arraytest_types.h  basetypetest.c  basetypetest_server.c  buffertest.c  calctest.c  calctest_cpp.cpp  calctest_data_access.c  calctest_data_access.h  calctest_server.c  calctest_server_c.cpp  (+14 more)
tools/: add_authors.sh  add_copyright.sh  check.pl  genguard.py  insert_copyright.sh  remove_copyright.sh
(+399 files in other folders)
